# ga-mla

./: CMakeLists.txt  README.md
plugins/magnitudes/: CMakeLists.txt
plugins/magnitudes/mla/: CMakeLists.txt  mla.cpp  mla.h
plugins/magnitudes/mla/descriptions/: global_mla.xml
plugins/magnitudes/msmax/: CMakeLists.txt  msmax.cpp  msmax.h
plugins/magnitudes/msmax/descriptions/: global_msmax.xml
